# crunchytask

./: .clangd  .env.example  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  README.md  bench_harness.h  bench_main.cc  bench_scenarios.cc  bench_scenarios.h  run_bench.sh
cli/: CMakeLists.txt  main.cc
clients/python/: README.md  pyproject.toml
clients/python/crunchytask/: __init__.py  client.py  wire.py
clients/python/tests/: fixtures.py  test_client.py  test_wire_format.py
cmake/: InstallRules.cmake  taskqueue-config.cmake.in
cmake/patches/: redis-plus-plus-fetchcontent.patch
examples/: CMakeLists.txt  producer.cc
include/taskqueue/: broker.h  broker_stats.h  clock.h  metrics.h  metrics_snapshot.h  parse_result.h  redis_broker.h  redis_keys.h  redis_scripts.h  retry_policy.h  runtime_config.h  scheduler.h  task_handler.h  task_id.h  task_json.h  task_message.h  task_registry.h  task_result.h  task_status.h  thread_pool.h  version.h  worker.h  worker_heartbeat.h
src/: CMakeLists.txt  clock.cc  metrics.cc  metrics_snapshot.cc  redis_broker.cc  redis_scripts.cc  retry_policy.cc  runtime_config.cc  scheduler.cc  task_id.cc  task_json.cc  task_message.cc  task_registry.cc  task_result.cc  task_status.cc  thread_pool.cc  version.cc  worker.cc  worker_heartbeat.cc
tests/: CMakeLists.txt  broker_stats_test.cc  broker_test.cc  crash_recovery_test.cc  dead_letter_test.cc  delayed_task_test.cc  failure_modes_test.cc  fake_broker.cc  fake_broker.h  integration_guard.h  metrics_test.cc  redis_atomicity_test.cc  redis_broker_integration_test.cc  retry_policy_test.cc  runtime_config_test.cc  scheduler_test.cc  task_json_test.cc  thread_pool_test.cc  version_test.cc  worker_heartbeat_test.cc  worker_test.cc
tests/catch2/: catch_user_config.hpp
